[package]
name = "sparkle"
version = "0.1.0"
authors = ["Evan Tatarka <evan@tatarka.me>"]
edition = "2018"

[[bin]]
name = "sparkle"
path = "src/mane.rs"

[dependencies]
nom = { version = "5.0.1", default-features = false, features = ["std"] }
cranelift = { git = "https://github.com/bytecodealliance/cranelift.git", rev = "545d40b" }
cranelift-module = { git = "https://github.com/bytecodealliance/cranelift.git", rev = "545d40b" }
cranelift-simplejit = { git = "https://github.com/bytecodealliance/cranelift.git", rev = "545d40b" }
cranelift-object = { git = "https://github.com/bytecodealliance/cranelift.git", rev = "545d40b" }
target-lexicon = "0.9.0"

[dev-dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.2"
spectral = "0.6.0"
