[package]
name = "sparkle"
version = "0.1.0"
authors = ["Evan Tatarka <evan@tatarka.me>"]
edition = "2018"

[workspace]
members = [".", "runtime", "runtime-lib"]
default-members = [".", "runtime", "runtime-lib"]

[[bin]]
name = "sparkle"
path = "src/mane.rs"

[dependencies]
nom = { version = "5.0.1", default-features = false, features = ["std"] }
cranelift = "0.78.0"
cranelift-module = "0.78.0"
cranelift-jit = "0.78.0"
cranelift-object = "0.78.0"
target-lexicon = "0.12.2"
cc = "1.0.71"
runtime = { path = "./runtime" }

[dev-dependencies]
assert_cmd = "2.0.2"
predicates = "2.0.3"
spectral = "0.6.0"

[profile.release]
lto = true
opt-level = "z"
