[package]
name = "runtime-lib"
version = "0.1.0"
edition = "2018"

[lib]
name = "sparkle"
crate-type = ["staticlib"]
path = "src/lib.rs"
doctest = false

[dependencies]
runtime = { path = "../runtime" }
libc = { version = "0.2.107", default-features = false }
panic-abort = "0.3.2"

[profile.release]
lto = true
opt-level = "z"